feat(category): add migration script for the categories table, as well as fixed some validation check issues within the Category entity